# STT_Agent_Rust

./: .gitignore  README.md  package-lock.json  package.json
.agent/workflows/: feature_development.md  scaffold_feature.md  scaffold_new_project.md
.github/workflows/: build.yml
ASR_NER_SERVER/: ASR_NER_Server.py  asr_ner.py  asr_ner_vllm.py  requirements_server.txt  run_server.sh
build_choices/: build_error.txt  build_linux.yml  build_windows_release.yml
src/: App.css  App.tsx  i18n.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_convert.rs  test_report.rs  test_silence.rs  test_split.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app_cmd.rs  audio_cmd.rs  file_cmd.rs  mod.rs  player_cmd.rs  project_cmd.rs  report_cmd.rs  silence_cmd.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: audio_player.rs  converter.rs  file_manager.rs  mod.rs  report.rs  silence.rs  splitter.rs
src/pages/: ConvertPage.tsx  ReportPage.tsx  SilenceAutoPage.tsx  SilencePage.tsx  SplitPage.tsx  WelcomePage.tsx
